k8s/student-app-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: student-app
  labels:
    name: student-app
---
